# chatnerds

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  README_chatgpt1.md  _xx_Pipfile  _xx_setup.py  output.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
chatnerds/: __init__.py  __main__.py  chat.py  chatdocs_chat.py  chroma_database.py  cli.py  cli_common.py  cli_nerd.py  cli_test.py  config.models.yml  config.prompts.yml  config.py  config.yml  constants.py  document_embeddings.py  enums.py  langchain_chains.py  logging_setup.py  podcaster.py  retrieve.py  study.py  transcriber.py  utils.py  youtuber.py
chatnerds/cli/: __init__.py  cli.py  cli_common.py  cli_db.py  cli_nerd.py  cli_nerds.py  cli_sources.py  cli_test.py  cli_tools.py  cli_utils.py  logging_setup.py
chatnerds/document_loaders/: __init__.py  document_loader.py  open_ai_whisper_loader.py  transcript_loader.py
chatnerds/langchain/: __init__.py  chain_factory.py  chain_runnables.py  chroma_database.py  document_embedder.py  document_embeddings.py  llm_factory.py  prompt_factory.py  summarizer.py  tagger.py
chatnerds/lib/: constants.py  enums.py  helpers.py
chatnerds/llms/: chain_factory.py  llm_factory.py  summarizer.py
chatnerds/stores/: chroma_store.py  qdrant_store.py  status_store.py  store_base.py  store_factory.py
chatnerds/tools/: __init__.py  audio_transcriber.py  chat_logger.py  podcast_downloader.py  youtube_downloader.py
docs/: chatdocs_tests.md  stoicism_resources.md
scripts/: kill.sh  pipenv-rebuild.sh  release.sh  test_batch.sh  test_batch_questions.txt
